#135: fixed groovy build issue + minor ui tweaks